# scanza

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  Cargo.toml  Justfile  README.md  diff  flake.nix  rust-toolchain.toml
config/: chains.json
multichain-client/: Cargo.toml  test-chains.json
multichain-client/examples/: test-chains.rs
multichain-client/src/: client.rs  lib.rs  metadata.rs
multichain-client/src/metadata/: chain.rs  token.rs
server/: .env  .rustfmt.toml  Cargo.toml
server/src/: chains.rs  cli.rs  init.rs  loader.rs  main.rs  routes.rs  types.rs
server/src/routes/: balance.rs  tokens.rs  transactions.rs  wallet.rs
tokens/: eth.json
tokens/eth/: 0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984.json  0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599.json  0x6B175474E89094C44Da98b954EedeAC495271d0F.json  0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfeBB0.json  0x7Fc66500c84A76Ad7e9c93437bFc5Ac33E2DDaE9.json  0x95aD61b0a150d79219dCF64E1E6Cc01f0B64C4cE.json  0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2.json  0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.json  0xC011a73ee8576Fb46F5E1c5751cA3B9Fe0af2a6F.json  0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2.json  0xc00e94Cb662C3520282E6f5717214004A7f26888.json  0xdAC17F958D2ee523a2206206994597C13D831ec7.json
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: App.tsx  ChainsProvider.tsx  main.tsx
web/src/components/: AddressInput.tsx  BalanceDisplay.tsx  CopyableText.tsx  Header.tsx  ModeToggle.tsx  Pagination.tsx
web/src/components/balance/: Balance.tsx  BalanceTable.tsx
web/src/components/theme/: ModeToggle.tsx
web/src/components/transactions/: AddressCell.tsx  MethodCell.tsx  TransactionHashCell.tsx  TransactionRow.tsx  TransactionTable.tsx  Transactions.tsx
web/src/lib/: constants.ts  txUtils.ts  types.ts
web/src/pages/: LandingPage.tsx  WalletPage.tsx
