[package]
name = "scanza"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.23"
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }

[dev-dependencies]
tempfile = "3.20.0"
