[package]
authors.workspace = true
edition.workspace = true
name = "server"
version = "0.1.0"

[dependencies]
# local
multichain-client = { workspace = true }

# crates.io
alloy = { workspace = true, default-features = false }
anyhow = { workspace = true }
axum = { workspace = true, features = ["http1", "http2", "json", "query", "tokio"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "std"] }
